- fixed visible menu bugs - worked with header and categories styles

--- a/src/components/layout/ui/nav/header/Header.module.scss
+++ b/src/components/layout/ui/nav/header/Header.module.scss
@@ -21,12 +21,18 @@
 
 .menu {
     position: absolute;
-    display: grid;
-    grid-template-columns: 1fr 4fr;
-    max-width: 100%;
+    //display: grid;
+    //grid-template-columns: 1fr 4fr;
+    max-width: max-content;
     left: 0;
     right: 0;
     margin: 0 20px;
+}
+
+.subcategoriesOpen {
+    display: grid;
+    grid-template-columns: 1fr 4fr;
+    max-width: 100% !important;
 }
 
 .logoCnt {
