--- a/src/components/layout/ui/nav/header/sub-components/categories/Categories.module.scss
+++ b/src/components/layout/ui/nav/header/sub-components/categories/Categories.module.scss
@@ -4,7 +4,7 @@
 
 .categoriesList {
   background-color: var(--black-005);
-  width: 100%;
+  width: max-content;
   border-bottom-left-radius: 4px;
   border-bottom-right-radius: 4px;
   position: relative;
